# optimacros_testcase

./: CMakeLists.txt  README.md  aimaii.txt
src/: how2thread.cpp  how2thread.hpp  main.cpp
